--- a/app/src/main/res/layout/community_hori_item.xml
+++ b/app/src/main/res/layout/community_hori_item.xml
@@ -2,14 +2,14 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="3dp"
+    android:layout_marginRight="3dp">
 
     <ImageView
         android:id="@+id/comm_recy_hori_img"
         android:layout_width="130dp"
         android:layout_height="160dp"
-        android:scaleType="centerCrop"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"/>
+        android:scaleType="centerCrop" />
 
 </LinearLayout>
