--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -29,7 +29,9 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/comm_recycler_horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:paddingRight="3dp"
+                android:paddingLeft="3dp">
             </android.support.v7.widget.RecyclerView>
 
             <TextView
