--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,7 @@
             </LinearLayout>
 
             <ImageView
+                android:id="@+id/iv_take_photo"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:src="@drawable/rect_1"
