--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="market_nav_textcolor_unselected">#ff000000</color>
     <color name="market_nav_textcolor_selected">#86a3b1</color>
     <color name="black">#000000</color>
+    <color name="bg_myself">#c6cfd8</color>
+    <color name="line_myself">#89898b</color>
 </resources>
