--- a/app/src/main/res/layout/fragment_myself.xml
+++ b/app/src/main/res/layout/fragment_myself.xml
@@ -76,7 +76,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="待支付"
+                android:text="处理中"
                 android:layout_gravity="center_horizontal"/>
         </LinearLayout>
         <LinearLayout
@@ -92,7 +92,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="待支付"
+                android:text="配送中"
                 android:layout_gravity="center_horizontal"/>
         </LinearLayout>
         <LinearLayout
@@ -108,7 +108,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="待支付"
+                android:text="已完成"
                 android:layout_gravity="center_horizontal"/>
         </LinearLayout>
 
