--- a/app/src/main/res/layout/home_verticle_item.xml
+++ b/app/src/main/res/layout/home_verticle_item.xml
@@ -2,16 +2,17 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="230dp"
     android:layout_margin="3dp"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:paddingTop="3dp"
+    android:paddingRight="3dp"
+    android:paddingLeft="3dp"
+    android:paddingBottom="3dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="3dp"
-        android:paddingRight="3dp"
-        android:paddingLeft="3dp">
+        android:orientation="vertical">
         <ImageView
             android:id="@+id/iv_home_verticle_item"
             android:layout_width="match_parent"
