--- a/app/src/main/res/layout/activity_dispose.xml
+++ b/app/src/main/res/layout/activity_dispose.xml
@@ -11,7 +11,7 @@
         android:layout_marginTop="40dp"
         android:layout_width="230dp"
         android:layout_height="270dp"
-        android:src="@drawable/ic_icon_camera"
+        android:src="@drawable/home_recycler_2"
         android:scaleType="centerCrop"
         android:layout_gravity="center_horizontal"
         app:borderRadius="25dp"
@@ -41,6 +41,15 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/bg_getphoto"
         android:text="上传图片"
+        android:textSize="18sp"
+        android:layout_gravity="center_horizontal"/>
+    <Button
+        android:id="@+id/bt_makeup"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_getphoto"
+        android:text="开始化妆"
         android:textSize="18sp"
         android:layout_gravity="center_horizontal"/>
 </LinearLayout>
