--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,9 @@
     <color name="bg_myself">#c6cfd8</color>
     <color name="line_myself">#89898b</color>
     <color name="bg_photo_acquire">#d596b1</color>
+
+    <!--<color name="preview_mock">#9a000000</color>-->
+    <color name="preview_mock">#00ffffff</color>
+    <color name="color_000000">#000000</color>
+    <color name="color_afff">#afff</color>
 </resources>
