--- a/app/src/main/res/layout/community_hori_item.xml
+++ b/app/src/main/res/layout/community_hori_item.xml
@@ -10,6 +10,6 @@
         android:id="@+id/comm_recy_hori_img"
         android:layout_width="130dp"
         android:layout_height="160dp"
-        android:scaleType="centerCrop" />
+        android:scaleType="fitXY" />
 
 </LinearLayout>
