--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -12,12 +12,12 @@
         android:background="@drawable/bg_market_nav">
         <TextView
             android:id="@+id/market_nav_dailycare"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_weight="1.5"
             android:text="日常护理"
             android:gravity="center"
             android:textSize="16sp"
+            android:maxLines="1"
             android:textColor="@color/selector_market_nav_textcolor"/>
         <TextView
             android:id="@+id/market_nav_powderybottom"
