--- a/app/src/main/res/layout/fragment_myself.xml
+++ b/app/src/main/res/layout/fragment_myself.xml
@@ -13,7 +13,7 @@
             android:id="@+id/img_myself_head"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/head_default"
+            android:src="@drawable/user_default"
             android:layout_centerInParent="true"/>
         <TextView
             android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
             android:maxLines="1"
             android:layout_below="@+id/img_myself_head"
             android:layout_centerHorizontal="true"
-            android:text="NI Cheng"
+            android:text="请先登录"
             android:textSize="17sp"/>
         <LinearLayout
             android:layout_width="wrap_content"
