--- a/app/src/main/res/layout/makeup_bar.xml
+++ b/app/src/main/res/layout/makeup_bar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="@color/main_nav_bg">
+    android:background="@color/bg_photo_acquire">
 
     <ImageView
         android:id="@+id/iv_register_back"
@@ -16,7 +16,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="注册"
+        android:text=""
         android:textSize="21sp"
         android:layout_centerInParent="true"
         android:textColor="@color/regist_bar_textcolor"/>
