--- a/app/src/main/res/layout/register_bar_two.xml
+++ b/app/src/main/res/layout/register_bar_two.xml
@@ -6,7 +6,7 @@
     android:background="@color/main_nav_bg">
 
     <ImageView
-        android:id="@+id/iv_register_back"
+        android:id="@+id/iv_registertwo_back"
         android:layout_width="50dp"
         android:layout_height="match_parent"
         android:src="@drawable/back_home"
@@ -16,7 +16,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="注册"
+        android:text="个人资料"
         android:textSize="21sp"
         android:layout_centerInParent="true"
         android:textColor="@color/regist_bar_textcolor"/>
